# qmd

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: cd.yml
qmd/: Cargo.toml
qmd-cli/: Cargo.toml
qmd-cli/src/: glibc_compat.rs  main.rs
qmd/src/: chunk.rs  collections.rs  config.rs  db.rs  document.rs  embed.rs  error.rs  formatter.rs  generate.rs  glibc_compat.rs  lib.rs  model.rs  path.rs  qmd.rs  rerank.rs  search.rs  store.rs
