[package]
name = "qmd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
authors = ["QNTX <x@qntx.fun>"]
description = "CLI for QMD — local search engine for markdown files."
keywords = ["markdown", "search", "cli", "fts5", "ai"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "qmd"
path = "src/main.rs"

[dependencies]
clap.workspace = true
qmd.workspace = true
serde_json.workspace = true

[lints]
workspace = true
