[package]
name = "qmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
authors = ["QNTX <x@qntx.fun>"]
description = "Lightweight SOTA local search engine for AI agents in Rust."
keywords = ["markdown", "search", "embedding", "fts5", "ai"]
categories = ["text-processing", "database"]

[lib]
name = "qmd"
path = "src/lib.rs"

[dependencies]
fastembed.workspace = true
ignore.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
sha2.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
