[package]
name = "qmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
authors = ["QNTX <x@qntx.fun>"]
description = "Lightweight SOTA local search engine for AI agents in Rust."
keywords = ["markdown", "search", "embedding", "fts5", "ai"]
categories = ["text-processing", "database"]

[lib]
name = "qmd"
path = "src/lib.rs"

[features]
default = ["glibc-compat"]

# Provide a `__isoc23_strto*` shim so binaries that pull in this crate
# (including doctests, integration tests, and qmd-cli) can link on glibc
# < 2.38, where the C23-versioned symbols don't exist. See
# `src/glibc_compat.rs` for details. Disable with `default-features = false`
# if your target glibc already exports these symbols.
glibc-compat = []

[dependencies]
fastembed.workspace = true
ignore.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
sha2.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
